syntax = "proto3";
package adverts;
option go_package = "./internal/pkg/adverts/delivery/grpc/gen/;gen";

//protoc --go_out=./gen --go-grpc_out=./gen --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

service Adverts {
  rpc GetAdvertById(GetAdvertByIdRequest) returns (GetAdvertByIdResponse) {} // есть
  rpc UpdateAdvertById(UpdateAdvertByIdRequest) returns (UpdateAdvertByIdResponse) {} // есть
  rpc DeleteAdvertById(DeleteAdvertByIdRequest) returns (DeleteAdvertByIdResponse) {} // есть
  rpc LikeAdvert(LikeAdvertRequest) returns (LikeAdvertResponse) {} // есть
  rpc DislikeAdvert(DislikeAdvertRequest) returns (DislikeAdvertResponse) {} // есть
  rpc CreateHouseAdvert(CreateHouseAdvertRequest) returns (CreateHouseAdvertResponse) {} // есть
  rpc GetExistBuildingByAddress(GetExistBuildingByAddressRequest) returns (GetExistBuildingByAddressResponse) {} // есть
  rpc CreateFlatAdvert(CreateFlatAdvertRequest) returns (CreateFlatAdvertResponse) {} // есть
  rpc GetSquareAdvertsList(GetSquareAdvertsListRequest) returns (GetSquareAdvertsListResponse) {} // есть
  rpc GetRectangleAdvertsList(GetRectangleAdvertsListRequest) returns (GetRectangleAdvertsListResponse) {} // есть
  //rpc UploadImage(UploadImageRequest) returns (UploadImageResponse) {}
  //rpc GetAdvertImages(GetAdvertImagesRequest) returns (GetAdvertImagesResponse) {}
  //rpc DeleteImage(DeleteImageRequest) returns (DeleteImageResponse) {}
  rpc GetRectangleAdvertsByUser(GetUserAdvertsRequest) returns (GetUserAdvertsResponse) {} // есть
  rpc GetLikedUserAdverts(GetLikedUserAdvertsRequest) returns (GetLikedUserAdvertsResponse) {} // есть
  rpc GetRectangleAdvertsByComplex(GetComplexAdvertsRequest) returns (GetComplexAdvertsResponse) {} // есть
}

message GetAdvertByIdRequest {
  int64 Id = 1;
}

enum StatusAreaHouse {
  STATUS_AREA_IHC = 0;
  STATUS_AREA_DNP = 1;
  STATUS_AREA_G = 2;
  STATUS_AREA_F = 3;
  STATUS_AREA_PSP = 4;
}

enum StatusHomeHouse {
  STATUS_HOME_LIVE = 0;
  STATUS_HOME_REPAIR_NEED = 1;
  STATUS_HOME_COMPLETE_NEED = 2;
  STATUS_HOME_RENOVATION = 3;
}

message AddressData {
  string Province = 1;
  string Town = 2;
  string Street = 3;
  string House = 4;
  string Metro = 5;
  string AddressPoint = 6;
}


message ImageResp {
  int64 Id = 1;
  string Photo = 2;
  int32 Priority = 3;
}

message PriceChangeData {
  int64 Price = 1;
  string DateCreation = 2;
}


message ComplexAdvertProperties {
  string ComplexId = 1;
  string NameComplex = 2;
  string PhotoCompany = 3;
  string NameCompany = 4;
}

message FlatProperties {
  int32 Floor = 1;
  double CeilingHeight = 2;
  double SquareGeneral = 3;
  int32 RoomCount = 4;
  double SquareResidential = 5;
  bool Apartment = 6;
  int32 FloorGeneral = 7;
}

message HouseProperties {
  double CeilingHeight = 1;
  double SquareArea = 2;
  double SquareHouse = 3;
  int32 BedroomCount = 4;
  StatusAreaHouse StatusArea = 5;
  bool Cottage = 6;
  StatusHomeHouse StatusHome = 7;
  int32 Floor = 8;
}

message HouseSquareProperties {
  bool Cottage = 1;
  double SquareArea = 2;
  double SquareHouse = 3;
  int32 BedroomCount = 4;
  int32 Floor = 5;
}

message FlatSquareProperties {
  int32 Floor = 1;
  int32 FloorGeneral = 2;
  int32 RoomCount = 3;
  double SquareGeneral = 4;
}

enum MaterialBuilding {
  MATERIAL_BRICK = 0;
  MATERIAL_MONOLITHIC = 1;
  MATERIAL_WOOD = 2;
  MATERIAL_PANEL = 3;
  MATERIAL_STALINSKY = 4;
  MATERIAL_BLOCK = 5;
  MATERIAL_MONOLITHIC_BLOCK = 6;
  MATERIAL_FRAME = 7;
  MATERIAL_AERATED_CONCRETE_BLOCK = 8;
  MATERIAL_GAS_SILICATE_BLOCK = 9;
  MATERIAL_FOAM_CONCRETE_BLOCK = 10;
}

message GetAdvertByIdResponse {
  int64 Id = 1;
  string AdvertType = 2;
  string TypeSale = 3;
  string Title = 4;
  string Description = 5;
  int64 CountViews = 6;
  int64 CountLikes = 7;
  int64 Price = 8;
  string Phone = 9;
  bool IsLiked = 10;
  bool IsAgent = 11;
  string Metro = 12;
  string Address = 13;
  string AddressPoint = 14;
  repeated PriceChangeData PriceHistory = 15;
  repeated ImageResp Images = 16;
  HouseProperties HouseProp = 17;
  FlatProperties FlatProperties = 18;
  int32 YearCreation = 19;
  MaterialBuilding Material = 20;
  ComplexAdvertProperties ComplexProperties = 21;
  string DateCreation = 22;
  int32 RespCode = 23;
}

message GetRectangleAdvertsListRequest {
  int64 Page = 1;
  int64 Size = 2;
  string AdvertType = 3;
  int64 MinPrice = 4;
  int64 MaxPrice = 5;
  string DealType = 6;
  int32 RoomCount = 7;
  string Address = 8;
}

message AdvertRectangleData {
  int64 Id = 1;
  string AdvertType = 2;
  string TypeSale = 3;
  string Title = 4;
  string Description = 5;
  int64 Price = 6;
  string Phone = 7;
  bool IsLiked = 8;
  string Metro = 9;
  string Address = 10;
  string AddressPoint = 11;
  string Photo = 12;
  HouseProperties HouseProp = 13;
  FlatProperties FlatProperties = 14;
  string DateCreation = 15;
}

message PageInfo {
  int64 TotalElements = 1;
  int64 TotalPages = 2;
  int64 CurrentPage = 3;
  int64 PageSize = 4;
}

message GetRectangleAdvertsListResponse {
  repeated AdvertRectangleData Adverts = 1;
  PageInfo Info = 2;
  int32 RespCode = 3;

}

message UpdateAdvertByIdRequest{
  int64 Id = 1;
  string AdvertType = 2;
  string TypeSale = 3;
  string Title = 4;
  string Description = 5;
  int64 Price = 6;
  string Phone = 7;
  bool isAgent = 8;
  AddressData Address = 9;
  HouseProperties HouseProp = 10;
  FlatProperties FlatProperties = 11;
  int32 YearCreation = 12;
  MaterialBuilding Material = 13;
}

message UpdateAdvertByIdResponse {
  int32 RespCode = 2;
}

message DeleteAdvertByIdRequest {
  int64 Id = 1;
}

message DeleteAdvertByIdResponse{
  int64 RespCode = 1;
}


message LikeAdvertRequest{
  int64 advId = 1;
  int64 userId = 2;
}

message LikeAdvertResponse{
  int32 RespCode = 2;
}

message DislikeAdvertRequest{
  int64 advId = 1;
  int64 userId = 2;
}

message DislikeAdvertResponse{
  int32 RespCode = 2;
}

message CreateHouseAdvertRequest{
  int64 UserId = 1;
  string TypeSale = 2;
  string Title = 3;
  string Description =4;
  string Phone=5;
  bool IsAgent = 6;
  HouseProperties CreateHouseProp = 7;
  int64 Price = 8;
  MaterialBuilding Material = 9;
  AddressData Address = 10;
  int32 YearCreation = 11;
}

message CreateHouseAdvertResponse{
  int64 Id = 1;
  int64 UserId = 2;
  string TypeSale = 3;
  string Title = 4;
  string Description = 5;
  string Phone = 6;
  bool IsAgent = 7;
  int64 Priority = 8;
  string DateCreation = 9;
  int32 RespCode = 11;

}

message GetExistBuildingByAddressRequest{
  AddressData AdrData = 1;
}

message GetExistBuildingByAddressResponse{
  string ComplexName = 1;
  int32 Floor = 2;
  MaterialBuilding Material = 3;
  int32 YearCreation = 4;
  int32 RespCode = 5;

}

message CreateFlatAdvertRequest{
  int64 UserId = 1;
  string TypeSale = 2;
  string Title = 3;
  string Description =4;
  string Phone=5;
  bool IsAgent = 6;
  FlatProperties CreateFlatProp = 7;
  int64 Price = 8;
  MaterialBuilding Material = 9;
  AddressData Address = 10;
  int32 YearCreation = 11;
}

message CreateFlatAdvertResponse{
  int64 Id = 1;
  int64 UserId = 2;
  string TypeSale = 3;
  string Title = 4;
  string Description = 5;
  string Phone = 6;
  bool IsAgent = 7;
  int64 Priority = 8;
  string DateCreation = 9;
  int32 RespCode = 10;
}

message GetSquareAdvertsListRequest{
  int64 PageSize = 1;
  int64 Offset = 2;
}

message AdvertSquareData {
  int64 Id = 1;
  string TypeAdvert = 2;
  string Photo = 3;
  string TypeSale = 4;
  string  Address = 5;
  string  Metro = 6;
  HouseSquareProperties HouseProp = 7;
  FlatSquareProperties FlatProp = 8;
  int64 Price = 9;
  string DateCreation = 10;
}

message GetSquareAdvertsListResponse{
  repeated AdvertSquareData SquareData = 1;
  int32 RespCode = 2;
}

message GetUserAdvertsRequest {
  int64 UserId = 1;
  int64 Page = 2;
  int64 Size = 3;
}

message GetUserAdvertsResponse{
  repeated  AdvertRectangleData RectDataSlice = 1;
  int32 RespCode = 2;
}

message GetLikedUserAdvertsRequest{
  int64 UserId = 1;
  int64 PageSize = 2;
  int64 Offset = 3;
}

message GetLikedUserAdvertsResponse{
  repeated  AdvertRectangleData RectDataSlice = 1;
  int32 RespCode = 2;
}

message GetComplexAdvertsRequest{
  int64 ComplexId = 1;
  int64 PageSize = 2;
  int64 Offset = 3;
}

message GetComplexAdvertsResponse{
  repeated  AdvertRectangleData RectDataSlice = 1;
  int32 RespCode = 2;
}