syntax = "proto3";
package questionnaire;
option go_package = "./internal/pkg/questionnaire/delivery/grpc/gen/;gen";

//protoc --go_out=./gen --go-grpc_out=./gen --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

service Question {
  rpc GetQuestionsByTheme(GetQuestionsByThemeRequest) returns (GetQuestionsByThemeResponse) {}
  rpc UploadAnswer(UploadAnswerRequest) returns (UploadAnswerResponse) {}
  //rpc GetAnswerStatistics(GetAnswerStatisticsRequest) returns (GetAnswerStatisticsResponse) {}
}

message UploadAnswerRequest {
  int64 UserId = 1;
  int64 QuestionId  = 2;
  int64 Mark = 3;
}

message UploadAnswerResponse {

}

message GetQuestionsByThemeRequest {
  string Theme = 1;
}

message QuestionResp {
	int64 Id = 1;
	string QuestionText = 2;
	int64 MaxMark = 3;
}

message GetQuestionsByThemeResponse {
    repeated QuestionResp Questions = 1;
}
